--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "16.0.8",
+    "mongodb": "^6.21.0",
+    "next": "^16.1.1",
     "react": "19.2.1",
     "react-dom": "19.2.1"
   },
