--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^12.23.26",
+    "lucide-react": "^0.562.0",
     "mongodb": "^6.21.0",
+    "mongoose": "^8.20.4",
     "next": "^16.1.1",
     "react": "19.2.1",
+    "react-confetti": "^6.4.0",
     "react-dom": "19.2.1"
   },
   "devDependencies": {
