--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.3.1",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "mongodb": "^6.21.0",
